fix price text wrap

--- a/src/app/(frontend)/product/[id]/page.module.scss
+++ b/src/app/(frontend)/product/[id]/page.module.scss
@@ -121,6 +121,7 @@
 				font-weight: 400;
 				line-height: 38px;
 				margin-bottom: 25px;
+				text-wrap: nowrap;
 
 				@media only screen and (max-width: $media-xxl) {
 					font-size: 30px;
